# govrix-scout

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  enhanced-installer-progress.ps1  install.ps1  install.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml  security.yml
config/: agentmesh.default.toml  govrix.default.toml  policies.example.yaml  pricing.json
crates/agentmesh-cli/src/: main.rs
crates/agentmesh-common/src/: config.rs  lib.rs
crates/agentmesh-common/src/protocols/: mcp.rs
crates/agentmesh-proxy/src/: events.rs  main.rs
crates/agentmesh-proxy/src/api/: mod.rs  router.rs
crates/agentmesh-proxy/src/api/handlers/: reports.rs
crates/agentmesh-proxy/src/policy/: budget.rs  engine.rs  loader.rs  mod.rs  pii.rs
crates/agentmesh-proxy/src/proxy/: agent_detect.rs  handler.rs  interceptor.rs  mod.rs  streaming.rs  upstream.rs
crates/agentmesh-proxy/tests/: integration.rs
crates/agentmesh-store/src/: agents.rs  costs.rs  events.rs  retention.rs
crates/govrix-common/: Cargo.toml
crates/govrix-common/src/: config.rs  lib.rs  license.rs  tenant.rs  tenant_registry.rs
crates/govrix-identity/: Cargo.toml
crates/govrix-identity/src/: ca.rs  certs.rs  mtls.rs
crates/govrix-keygen/: Cargo.toml
crates/govrix-keygen/src/: main.rs
crates/govrix-policy/: Cargo.toml
crates/govrix-policy/src/: compliance.rs  engine.rs  hook.rs  lib.rs  pii.rs  session.rs
crates/govrix-scout-cli/: Cargo.toml
crates/govrix-scout-cli/src/: client.rs  http.rs  main.rs  output.rs
crates/govrix-scout-cli/src/commands/: agents.rs  events.rs  mod.rs  status.rs
crates/govrix-scout-common/: Cargo.toml
crates/govrix-scout-common/src/: config.rs  errors.rs  lib.rs
crates/govrix-scout-common/src/models/: agent.rs  cost.rs  event.rs  mod.rs  pricing.rs  session.rs  trace.rs
crates/govrix-scout-common/src/protocols/: anthropic.rs  mod.rs  openai.rs
crates/govrix-scout-proxy/: Cargo.toml
crates/govrix-scout-proxy/src/: anomaly.rs  circuit_breaker.rs  events.rs  lib.rs  main.rs  otlp.rs  trace_context.rs
crates/govrix-scout-proxy/src/api/: mod.rs  router.rs  state.rs
crates/govrix-scout-proxy/src/api/handlers/: agents.rs  config.rs  costs.rs  events.rs  health.rs  mod.rs  platform.rs  reports.rs  traces.rs
crates/govrix-scout-proxy/src/api/middleware/: auth.rs  cors.rs  mod.rs
crates/govrix-scout-proxy/src/policy/: budget.rs  engine.rs  loader.rs  mod.rs  pii.rs  types.rs
crates/govrix-scout-proxy/src/proxy/: agent_detect.rs  handler.rs  interceptor.rs  mod.rs  streaming.rs  upstream.rs
crates/govrix-scout-proxy/static/: dashboard.html
crates/govrix-scout-proxy/tests/: integration.rs
crates/govrix-scout-reports/: Cargo.toml
crates/govrix-scout-reports/src/: activity.rs  cost.rs  inventory.rs  lib.rs  render.rs  usage.rs
crates/govrix-scout-store/: Cargo.toml
crates/govrix-scout-store/src/: agents.rs  budget.rs  compliance_queries.rs  db.rs  events.rs  lib.rs  retention.rs  sessions.rs  traces.rs
crates/govrix-server/: Cargo.toml
crates/govrix-server/src/: api.rs  main.rs
dashboard/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  hooks.ts  platform.ts  traces.ts  types.ts
dashboard/src/components/: AgentHistoryQuery.tsx  EnterpriseGate.tsx  EventStream.tsx
dashboard/src/components/common/: DataTable.tsx  EmptyState.tsx  EnterpriseFeatureCard.tsx  JsonViewer.tsx  LoadingState.tsx  StatusBadge.tsx  TimeRangePicker.tsx
dashboard/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/src/context/: AuthContext.tsx
dashboard/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  BudgetPage.tsx  CompliancePage.tsx  CostsPage.tsx  EuAiActPage.tsx  EventsPage.tsx  KillSwitchPage.tsx  OverviewPage.tsx  PiiActivityPage.tsx  PoliciesPage.tsx  ReportsPage.tsx  RiskOverviewPage.tsx  SessionsPage.tsx  SettingsPage.tsx  StreamPage.tsx  TraceListPage.tsx  TracePage.tsx
docker/: Dockerfile  Dockerfile.dashboard  docker-compose.production.yml  docker-compose.yml  nginx.conf
docs/plans/: 2026-02-19-integration-test-environment.md
init/: 002_create_agents.sql  003_create_costs.sql  004_create_hypertables.sql  005_create_indexes.sql  009_agent_tracing.sql  010_sessions.sql  011_traces.sql  README.md
k8s/: deployment.yaml  service.yaml
migrations/: 001_create_events.sql
remotion/src/scenes/: TheClose.tsx
scripts/: reset-db.sh  seed-db.sh  seed-demo-data.sh  setup.sh
scripts/pricing/: README.md  requirements.txt  update_pricing.py
scripts/pricing/fetchers/: anthropic_fetcher.py  base_fetcher.py  openai_fetcher.py
scripts/pricing/tests/: test_pricing.py
