[package]
name = "govrix-common"
version.workspace = true
edition.workspace = true

[dependencies]
agentmesh-common = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
figment = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
