[package]
name = "govrix-common"
version.workspace = true
edition.workspace = true

[dependencies]
govrix-scout-common = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
figment = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
