[package]
name = "govrix-keygen"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"

[[bin]]
name = "govrix-keygen"
path = "src/main.rs"

[dependencies]
govrix-common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
