[package]
name = "govrix-scout-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Govrix Scout command-line interface"

[[bin]]
name = "govrix-scout-cli"
path = "src/main.rs"

[dependencies]
govrix-scout-common = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
comfy-table = { workspace = true }
serde_yaml = "0.9"
