[package]
name = "govrix-scout-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, models, and utilities for Govrix Scout"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"

[dev-dependencies]
tokio = { workspace = true }
