[package]
name = "govrix-scout-reports"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Report generation for Govrix Scout (HTML, JSON, PDF)"

[dependencies]
govrix-scout-common = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
